// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linkAssets should link all types of assets in a Java project for the first time 1`] = `
"Snapshot Diff:
- First value
+ Second value

  package com.example;

+ import com.facebook.react.common.assets.ReactFontManager;
+
  import android.app.Application;
  import com.facebook.react.ReactApplication;

  public class MainApplication extends Application implements ReactApplication {
    @Override
    public void onCreate() {
      super.onCreate();
+     ReactFontManager.getInstance().addCustomFont(this, \\"Lato\\", R.font.lato);
+     ReactFontManager.getInstance().addCustomFont(this, \\"Fira Code\\", R.font.fira_code);
      SoLoader.init(this, /* native exopackage */ false);
    }
  }
"
`;

exports[`linkAssets should link all types of assets in a Java project for the first time 2`] = `
"Snapshot Diff:
- First value
+ Second value

+ {
+   \\"migIndex\\": 2,
+   \\"data\\": [
+     {
+       \\"path\\": \\"assets/android/fonts/Lato-Bold.ttf\\",
+       \\"sha1\\": \\"542498221d97bee5bdbccf86ee8890bf8e8005c9\\"
+     },
+     {
+       \\"path\\": \\"assets/android/fonts/Lato-BoldItalic.ttf\\",
+       \\"sha1\\": \\"6bf491e78e16d3b9c8a55752e1bd658e15ed7f19\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
+       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
+       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
+       \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/GIF Image.gif\\",
+       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/JPG Image.jpg\\",
+       \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
+       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/PNG Image.png\\",
+       \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
+       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
+     }
+   ]
+ }
+"
`;

exports[`linkAssets should link all types of assets in a Java project for the first time 3`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/lato_regular\\"/>
+   <font app:fontStyle=\\"italic\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bolditalic\\"/>
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bold\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should link all types of assets in a Java project for the first time 4`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/firacode_regular\\"/>
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/firacode_bold\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should link all types of assets in a Java project for the first time 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,11 +30,11 @@
  		<false/>
  		<key>NSAllowsLocalNetworking</key>
  		<true/>
  	</dict>
  	<key>NSLocationWhenInUseUsageDescription</key>
- 	<string></string>
+ 	<string/>
  	<key>UILaunchStoryboardName</key>
  	<string>LaunchScreen</string>
  	<key>UIRequiredDeviceCapabilities</key>
  	<array>
  		<string>armv7</string>
@@ -45,8 +45,15 @@
  		<string>UIInterfaceOrientationLandscapeLeft</string>
  		<string>UIInterfaceOrientationLandscapeRight</string>
  	</array>
  	<key>UIViewControllerBasedStatusBarAppearance</key>
  	<false/>
+ 	<key>UIAppFonts</key>
+ 	<array>
+ 		<string>FiraCode-Bold.otf</string>
+ 		<string>FiraCode-Regular.otf</string>
+ 		<string>Lato-Regular.ttf</string>
+ 		<string>Raleway-Regular.ttf</string>
+ 	</array>
  </dict>
  </plist>
"
`;

exports[`linkAssets should link all types of assets in a Java project for the first time 6`] = `
"Snapshot Diff:
- First value
+ Second value

+ {
+   \\"migIndex\\": 2,
+   \\"data\\": [
+     {
+       \\"path\\": \\"assets/ios/fonts/Raleway-Regular.ttf\\",
+       \\"sha1\\": \\"c01aaff04ead4a08b89bcb81d3d3d954345eb67f\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
+       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
+       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
+       \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/GIF Image.gif\\",
+       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/JPG Image.jpg\\",
+       \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
+       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/PNG Image.png\\",
+       \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
+       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
+     }
+   ]
+ }
+"
`;

exports[`linkAssets should link all types of assets in a Kotlin project for the first time 1`] = `
"Snapshot Diff:
- First value
+ Second value

  package com.example

+ import com.facebook.react.common.assets.ReactFontManager
+
  import android.app.Application
  import com.facebook.react.ReactApplication

  class MainApplication : Application(), ReactApplication {
    override fun onCreate() {
      super.onCreate()
+     ReactFontManager.getInstance().addCustomFont(this, \\"Lato\\", R.font.lato)
+     ReactFontManager.getInstance().addCustomFont(this, \\"Fira Code\\", R.font.fira_code)
      SoLoader.init(this, false)
    }
  }
"
`;

exports[`linkAssets should link all types of assets in a Kotlin project for the first time 2`] = `
"Snapshot Diff:
- First value
+ Second value

+ {
+   \\"migIndex\\": 2,
+   \\"data\\": [
+     {
+       \\"path\\": \\"assets/android/fonts/Lato-Bold.ttf\\",
+       \\"sha1\\": \\"542498221d97bee5bdbccf86ee8890bf8e8005c9\\"
+     },
+     {
+       \\"path\\": \\"assets/android/fonts/Lato-BoldItalic.ttf\\",
+       \\"sha1\\": \\"6bf491e78e16d3b9c8a55752e1bd658e15ed7f19\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
+       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
+       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
+       \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/GIF Image.gif\\",
+       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/JPG Image.jpg\\",
+       \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
+       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/PNG Image.png\\",
+       \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
+       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
+     }
+   ]
+ }
+"
`;

exports[`linkAssets should link all types of assets in a Kotlin project for the first time 3`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/lato_regular\\"/>
+   <font app:fontStyle=\\"italic\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bolditalic\\"/>
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bold\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should link all types of assets in a Kotlin project for the first time 4`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/firacode_regular\\"/>
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/firacode_bold\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should link all types of assets in a Kotlin project for the first time 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -30,11 +30,11 @@
  		<false/>
  		<key>NSAllowsLocalNetworking</key>
  		<true/>
  	</dict>
  	<key>NSLocationWhenInUseUsageDescription</key>
- 	<string></string>
+ 	<string/>
  	<key>UILaunchStoryboardName</key>
  	<string>LaunchScreen</string>
  	<key>UIRequiredDeviceCapabilities</key>
  	<array>
  		<string>armv7</string>
@@ -45,8 +45,15 @@
  		<string>UIInterfaceOrientationLandscapeLeft</string>
  		<string>UIInterfaceOrientationLandscapeRight</string>
  	</array>
  	<key>UIViewControllerBasedStatusBarAppearance</key>
  	<false/>
+ 	<key>UIAppFonts</key>
+ 	<array>
+ 		<string>FiraCode-Bold.otf</string>
+ 		<string>FiraCode-Regular.otf</string>
+ 		<string>Lato-Regular.ttf</string>
+ 		<string>Raleway-Regular.ttf</string>
+ 	</array>
  </dict>
  </plist>
"
`;

exports[`linkAssets should link all types of assets in a Kotlin project for the first time 6`] = `
"Snapshot Diff:
- First value
+ Second value

+ {
+   \\"migIndex\\": 2,
+   \\"data\\": [
+     {
+       \\"path\\": \\"assets/ios/fonts/Raleway-Regular.ttf\\",
+       \\"sha1\\": \\"c01aaff04ead4a08b89bcb81d3d3d954345eb67f\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
+       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
+       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
+       \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/GIF Image.gif\\",
+       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/JPG Image.jpg\\",
+       \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
+       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/PNG Image.png\\",
+       \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
+       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
+     }
+   ]
+ }
+"
`;

exports[`linkAssets should link new assets in a project 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,16 +8,24 @@
      {
        \\"path\\": \\"assets/android/fonts/Lato-BoldItalic.ttf\\",
        \\"sha1\\": \\"6bf491e78e16d3b9c8a55752e1bd658e15ed7f19\\"
      },
      {
+       \\"path\\": \\"assets/android/fonts/Montserrat-Regular.ttf\\",
+       \\"sha1\\": \\"bb895d19b8a1fbe1c57fc89cac5da82fdc8fdef4\\"
+     },
+     {
        \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
        \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
      },
      {
        \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
        \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
+     },
+     {
+       \\"path\\": \\"assets/shared/fonts/Lato-Light.ttf\\",
+       \\"sha1\\": \\"ad0d178564445a535b15d417f5b18019923d3bab\\"
      },
      {
        \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
        \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
      },"
`;

exports[`linkAssets should link new assets in a project 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,10 +6,11 @@
  import com.facebook.react.ReactApplication

  class MainApplication : Application(), ReactApplication {
    override fun onCreate() {
      super.onCreate()
+     ReactFontManager.getInstance().addCustomFont(this, \\"Montserrat\\", R.font.montserrat)
      ReactFontManager.getInstance().addCustomFont(this, \\"Lato\\", R.font.lato)
      ReactFontManager.getInstance().addCustomFont(this, \\"Fira Code\\", R.font.fira_code)
      SoLoader.init(this, false)
    }
  }"
`;

exports[`linkAssets should link new assets in a project 3`] = `
"Snapshot Diff:
- First value
+ Second value

  <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
  <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"300\\" app:font=\\"@font/lato_light\\"/>
    <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/lato_regular\\"/>
    <font app:fontStyle=\\"italic\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bolditalic\\"/>
    <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bold\\"/>
  </font-family>
"
`;

exports[`linkAssets should link new assets in a project 4`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/montserrat_regular\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should link new assets in a project 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,10 +12,14 @@
      {
        \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
        \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
      },
      {
+       \\"path\\": \\"assets/shared/fonts/Lato-Light.ttf\\",
+       \\"sha1\\": \\"ad0d178564445a535b15d417f5b18019923d3bab\\"
+     },
+     {
        \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
        \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
      },
      {
        \\"path\\": \\"assets/shared/GIF Image.gif\\","
`;

exports[`linkAssets should link new assets in a project 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -51,9 +51,10 @@
  	<array>
  		<string>FiraCode-Bold.otf</string>
  		<string>FiraCode-Regular.otf</string>
  		<string>Lato-Regular.ttf</string>
  		<string>Raleway-Regular.ttf</string>
+ 		<string>Lato-Light.ttf</string>
  	</array>
  </dict>
  </plist>
"
`;

exports[`linkAssets should relink font assets from an Android project to use XML resources 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  {
-   \\"migIndex\\": 1,
+   \\"migIndex\\": 2,
    \\"data\\": [
      {
        \\"path\\": \\"assets/android/fonts/Lato-Bold.ttf\\",
        \\"sha1\\": \\"542498221d97bee5bdbccf86ee8890bf8e8005c9\\"
      },
@@ -41,5 +41,6 @@
        \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
        \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
      }
    ]
  }
+"
`;

exports[`linkAssets should relink font assets from an Android project to use XML resources 2`] = `
"Snapshot Diff:
- First value
+ Second value

  package com.example

+ import com.facebook.react.common.assets.ReactFontManager
+
  import android.app.Application
  import com.facebook.react.ReactApplication

  class MainApplication : Application(), ReactApplication {
    override fun onCreate() {
      super.onCreate()
+     ReactFontManager.getInstance().addCustomFont(this, \\"Lato\\", R.font.lato)
+     ReactFontManager.getInstance().addCustomFont(this, \\"Fira Code\\", R.font.fira_code)
      SoLoader.init(this, false)
    }
  }
"
`;

exports[`linkAssets should relink font assets from an Android project to use XML resources 3`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/lato_regular\\"/>
+   <font app:fontStyle=\\"italic\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bolditalic\\"/>
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bold\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should relink font assets from an Android project to use XML resources 4`] = `
"Snapshot Diff:
- First value
+ Second value

+ <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
+ <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/firacode_regular\\"/>
+   <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/firacode_bold\\"/>
+ </font-family>
+"
`;

exports[`linkAssets should relink font assets from an Android project to use XML resources 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  {
-   \\"migIndex\\": 1,
+   \\"migIndex\\": 2,
    \\"data\\": [
      {
        \\"path\\": \\"assets/ios/fonts/Raleway-Regular.ttf\\",
        \\"sha1\\": \\"c01aaff04ead4a08b89bcb81d3d3d954345eb67f\\"
      },
@@ -37,5 +37,6 @@
        \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
        \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
      }
    ]
  }
+"
`;

exports[`linkAssets should unlink all assets in a project 1`] = `
"Snapshot Diff:
- First value
+ Second value

  {
    \\"migIndex\\": 2,
-   \\"data\\": [
-     {
-       \\"path\\": \\"assets/android/fonts/Lato-Bold.ttf\\",
-       \\"sha1\\": \\"542498221d97bee5bdbccf86ee8890bf8e8005c9\\"
-     },
-     {
-       \\"path\\": \\"assets/android/fonts/Lato-BoldItalic.ttf\\",
-       \\"sha1\\": \\"6bf491e78e16d3b9c8a55752e1bd658e15ed7f19\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
-       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
-       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
-       \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/GIF Image.gif\\",
-       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/JPG Image.jpg\\",
-       \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
-       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/PNG Image.png\\",
-       \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
-       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
-     }
-   ]
+   \\"data\\": []
  }
"
`;

exports[`linkAssets should unlink all assets in a project 2`] = `
"Snapshot Diff:
- First value
+ Second value

  package com.example

- import com.facebook.react.common.assets.ReactFontManager

  import android.app.Application
  import com.facebook.react.ReactApplication

  class MainApplication : Application(), ReactApplication {
    override fun onCreate() {
      super.onCreate()
-     ReactFontManager.getInstance().addCustomFont(this, \\"Lato\\", R.font.lato)
-     ReactFontManager.getInstance().addCustomFont(this, \\"Fira Code\\", R.font.fira_code)
      SoLoader.init(this, false)
    }
  }
"
`;

exports[`linkAssets should unlink all assets in a project 3`] = `
"Snapshot Diff:
- First value
+ Second value

  {
    \\"migIndex\\": 2,
-   \\"data\\": [
-     {
-       \\"path\\": \\"assets/ios/fonts/Raleway-Regular.ttf\\",
-       \\"sha1\\": \\"c01aaff04ead4a08b89bcb81d3d3d954345eb67f\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
-       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
-       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
-       \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/GIF Image.gif\\",
-       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/JPG Image.jpg\\",
-       \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
-       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/PNG Image.png\\",
-       \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
-       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
-     }
-   ]
+   \\"data\\": []
  }
"
`;

exports[`linkAssets should unlink all assets in a project 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -46,14 +46,9 @@
  		<string>UIInterfaceOrientationLandscapeRight</string>
  	</array>
  	<key>UIViewControllerBasedStatusBarAppearance</key>
  	<false/>
  	<key>UIAppFonts</key>
- 	<array>
- 		<string>FiraCode-Bold.otf</string>
- 		<string>FiraCode-Regular.otf</string>
- 		<string>Lato-Regular.ttf</string>
- 		<string>Raleway-Regular.ttf</string>
- 	</array>
+ 	<array/>
  </dict>
  </plist>
"
`;

exports[`linkAssets should unlink deleted assets in a project 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,43 +4,19 @@
      {
        \\"path\\": \\"assets/android/fonts/Lato-Bold.ttf\\",
        \\"sha1\\": \\"542498221d97bee5bdbccf86ee8890bf8e8005c9\\"
      },
      {
-       \\"path\\": \\"assets/android/fonts/Lato-BoldItalic.ttf\\",
-       \\"sha1\\": \\"6bf491e78e16d3b9c8a55752e1bd658e15ed7f19\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
-       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
-       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
-     },
-     {
        \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
        \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/GIF Image.gif\\",
-       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
      },
      {
        \\"path\\": \\"assets/shared/JPG Image.jpg\\",
        \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
      },
      {
-       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
-       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
-     },
-     {
        \\"path\\": \\"assets/shared/PNG Image.png\\",
        \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
-       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
      }
    ]
  }
"
`;

exports[`linkAssets should unlink deleted assets in a project 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,10 +7,9 @@

  class MainApplication : Application(), ReactApplication {
    override fun onCreate() {
      super.onCreate()
      ReactFontManager.getInstance().addCustomFont(this, \\"Lato\\", R.font.lato)
-     ReactFontManager.getInstance().addCustomFont(this, \\"Fira Code\\", R.font.fira_code)
      SoLoader.init(this, false)
    }
  }
"
`;

exports[`linkAssets should unlink deleted assets in a project 3`] = `
"Snapshot Diff:
- First value
+ Second value

  <?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
  <font-family xmlns:app=\\"http://schemas.android.com/apk/res-auto\\">
    <font app:fontStyle=\\"normal\\" app:fontWeight=\\"400\\" app:font=\\"@font/lato_regular\\"/>
-   <font app:fontStyle=\\"italic\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bolditalic\\"/>
    <font app:fontStyle=\\"normal\\" app:fontWeight=\\"700\\" app:font=\\"@font/lato_bold\\"/>
  </font-family>
"
`;

exports[`linkAssets should unlink deleted assets in a project 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -4,39 +4,19 @@
      {
        \\"path\\": \\"assets/ios/fonts/Raleway-Regular.ttf\\",
        \\"sha1\\": \\"c01aaff04ead4a08b89bcb81d3d3d954345eb67f\\"
      },
      {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Bold.otf\\",
-       \\"sha1\\": \\"cdb344c9982562a59831836170615e503af0db22\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/fonts/FiraCode-Regular.otf\\",
-       \\"sha1\\": \\"5115ac0f821964b0bc2938273b37be4088f3cd8e\\"
-     },
-     {
        \\"path\\": \\"assets/shared/fonts/Lato-Regular.ttf\\",
        \\"sha1\\": \\"e923c72eda5e50a87e18ff5c71e9ef4b3b6455a3\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/GIF Image.gif\\",
-       \\"sha1\\": \\"da39a3ee5e6b4b0d3255bfef95601890afd80709\\"
      },
      {
        \\"path\\": \\"assets/shared/JPG Image.jpg\\",
        \\"sha1\\": \\"255148944427577e1a21a5a62a1d98aa3269e9e8\\"
      },
      {
-       \\"path\\": \\"assets/shared/MP3 Sound (1).mp3\\",
-       \\"sha1\\": \\"1bd4b065508235aaa400ba4e019fbfb2cb7d291c\\"
-     },
-     {
        \\"path\\": \\"assets/shared/PNG Image.png\\",
        \\"sha1\\": \\"f1498c79d91acbb2291368fa1ea629ad2332a935\\"
-     },
-     {
-       \\"path\\": \\"assets/shared/TestSample Document.pdf\\",
-       \\"sha1\\": \\"0ba2141b8996a615d7484536d7a97c27a1768407\\"
      }
    ]
  }
"
`;

exports[`linkAssets should unlink deleted assets in a project 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -47,12 +47,10 @@
  	</array>
  	<key>UIViewControllerBasedStatusBarAppearance</key>
  	<false/>
  	<key>UIAppFonts</key>
  	<array>
- 		<string>FiraCode-Bold.otf</string>
- 		<string>FiraCode-Regular.otf</string>
  		<string>Lato-Regular.ttf</string>
  		<string>Raleway-Regular.ttf</string>
  	</array>
  </dict>
  </plist>"
`;
